# repo-ctx

./: .gitignore  .repoctxignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CODEMAP.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  dist-workspace.toml  vercel.json
.github/workflows/: ci.yml
crates/becket-cli/: Cargo.toml
crates/becket-cli/src/: commands.rs  main.rs
crates/becket-core/: Cargo.toml
crates/becket-core/src/wiki/: index.rs  mod.rs  store.rs  util.rs
crates/becket-core/tests/: fixtures.rs
crates/becket-embed/: Cargo.toml
crates/becket-embed/src/: onnx.rs
crates/becket-mcp/: Cargo.toml
crates/becket-mcp/src/: sampling.rs  server.rs
crates/becket-query/: Cargo.toml
crates/becket-query/src/: assemble.rs  budget.rs  engine.rs  lib.rs  types.rs
crates/repoctx-cli/: Cargo.toml
crates/repoctx-cli/src/: commands.rs  main.rs  watch.rs
crates/repoctx-core/: Cargo.toml
crates/repoctx-core/src/: build.rs  embed.rs  error.rs  extract.rs  ids.rs  language.rs  lib.rs  redact.rs  walker.rs
crates/repoctx-core/src/domain/: mod.rs
crates/repoctx-core/src/flow/: mod.rs
crates/repoctx-core/src/graph/: mod.rs
crates/repoctx-core/src/parse/: http_clients.rs  mod.rs  service_contracts.rs  tree_sitter.rs
crates/repoctx-core/src/wiki/: compiler.rs  fingerprint.rs  lint.rs  mod.rs  store.rs
crates/repoctx-core/src/workspace/: linker.rs  mod.rs
crates/repoctx-core/tests/: fixtures.rs
crates/repoctx-embed/: Cargo.toml
crates/repoctx-embed/src/: embedder.rs  lib.rs  model.rs  onnx.rs
crates/repoctx-mcp/: Cargo.toml
crates/repoctx-mcp/src/: main.rs  sampling.rs  server.rs
crates/repoctx-query/: Cargo.toml
crates/repoctx-query/src/: assemble.rs  engine.rs  error.rs  lib.rs  types.rs
crates/repoctx-schema/: Cargo.toml
crates/repoctx-schema/src/: artifacts.rs  edge.rs  error.rs  json_schema.rs  lib.rs  symbol.rs  version.rs  wiki.rs  workspace.rs
crates/repoctx-schema/tests/: schema_validation.rs
crates/repoctx-store/: Cargo.toml
crates/repoctx-store/src/: artifacts.rs  db.rs  error.rs  lib.rs  paths.rs
docs/: windows.md
docs/adr/: 0004-cargo-dist-distribution.md  0006-grounded-knowledge-wiki.md  README.md
packaging/: README.md
schemas/: architecture.schema.json  dependencies.schema.json  entrypoints.schema.json  flows.schema.json  symbols.schema.json  wiki_lint.schema.json  wiki_stale.schema.json
scripts/: becket-local.sh
tests/fixtures/flows-payment/src/payment/: checkout.rs  checkout_test.rs
tests/fixtures/inheritance/src/: Animals.java  traits.rs
tests/fixtures/monorepo-edges/src/: graph.rs
tests/fixtures/tiny-python/: main.py
tests/fixtures/tiny-rust/src/: lib.rs
tests/fixtures/workspace-messaging/: repoctx.workspace.toml
tests/fixtures/workspace-messaging/orders-consumer/src/: consume.py
tests/fixtures/workspace-messaging/orders-publisher/src/: publish.py
tests/fixtures/workspace-messaging/profile-client/src/: client.py
tests/fixtures/workspace-messaging/profile-server/src/: server.py
website/: docs.html  index.html
website/css/: styles.css
website/js/: i18n.js
