[workspace]
resolver = "2"
members = [
    "crates/repoctx-cli",
    "crates/repoctx-core",
    "crates/repoctx-mcp",
    "crates/repoctx-query",
    "crates/repoctx-schema",
    "crates/repoctx-store",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/GabrieleRuggieri/repo-ctx"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
uuid = { version = "1", features = ["v4", "serde"] }

repoctx-core = { path = "crates/repoctx-core" }
repoctx-query = { path = "crates/repoctx-query" }
repoctx-schema = { path = "crates/repoctx-schema" }
repoctx-store = { path = "crates/repoctx-store" }

[profile.release]
lto = true
codegen-units = 1
strip = true
