[workspace]
resolver = "2"
members = [
    "crates/repoctx-cli",
    "crates/repoctx-core",
    "crates/repoctx-embed",
    "crates/repoctx-mcp",
    "crates/repoctx-query",
    "crates/repoctx-schema",
    "crates/repoctx-store",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/GabrieleRuggieri/repo-ctx"
homepage = "https://github.com/GabrieleRuggieri/repo-ctx"
description = "Local codebase intelligence layer for AI agents"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
uuid = { version = "1", features = ["v4", "serde"] }

repoctx-core = { path = "crates/repoctx-core" }
repoctx-embed = { path = "crates/repoctx-embed" }
repoctx-query = { path = "crates/repoctx-query" }
repoctx-schema = { path = "crates/repoctx-schema" }
repoctx-store = { path = "crates/repoctx-store" }
regex = "1"
rmcp = { version = "1.8", features = ["server", "transport-io", "macros"] }
schemars = "1.2"
jsonschema = "0.29"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
