[package]
name = "becket-mcp"
description = "MCP server for Becket — agent interface over stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "becket-mcp"
path = "src/main.rs"

[features]
default = []
onnx = ["becket-core/onnx", "becket-query/onnx"]

[dependencies]
anyhow = { workspace = true }
becket-core = { workspace = true, default-features = false }
becket-query = { workspace = true, default-features = false }
becket-schema = { workspace = true }
becket-store = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9.6"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.dist]
dist = true
npm-package = "becket-mcp"
formula = "becket-mcp"
