[package]
name = "repoctx-cli"
description = "CLI for RepoCtx — local codebase intelligence layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "repoctx"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
repoctx-core = { workspace = true }
repoctx-query = { workspace = true }
repoctx-schema = { workspace = true }
repoctx-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
