[package]
name = "repoctx-mcp"
description = "MCP server for RepoCtx — agent interface over stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "repoctx-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
repoctx-core = { workspace = true }
repoctx-query = { workspace = true }
repoctx-schema = { workspace = true }
repoctx-store = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
