[package]
name = "repoctx-query"
description = "Query engine for impact, flow, context, and dependency lookups"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
repoctx-schema = { workspace = true }
repoctx-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
repoctx-core = { workspace = true }
tempfile = "3"
